Bug 144343 - Form - Form-Based Filters: Filter navigator shows up every second filtering
Summary: Form - Form-Based Filters: Filter navigator shows up every second filtering
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Database-Forms
  Show dependency treegraph
 
Reported: 2021-09-06 21:53 UTC by Hans Zekl
Modified: 2025-11-12 05:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot1 (42.37 KB, image/gif)
2022-04-10 09:29 UTC, Hans Zekl
Details
Screenshot2 (25.59 KB, image/gif)
2022-04-10 09:30 UTC, Hans Zekl
Details
Open the form. Press Formbased Filter, apply, press Foirmbased Filter again (11.29 KB, application/vnd.oasis.opendocument.database)
2022-11-26 07:29 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hans Zekl 2021-09-06 21:53:18 UTC
Description:
This is a minor problem:
I have a form with several columns. When I want to filter the data according to a specific value of a column I click into this column and the window of the filter navigator pops up. I select the value from a drop-down list. This works fine.

When I want to filter again with another value the window of the navigator does not show up, but filtering works fine.

When filtering with another value everything works as expected, the filter navigator appears again and so on. 

This behavior exists since release 6.x. I do not remember the exact version.

Btw, the position of the window cannot be changed since version 7.1.5. It is positioned always on the left side of the screen. When I move it to another place, it shows up on the left side again when I call the filter again.

Steps to Reproduce:
1. see Description
2.
3.

Actual Results:
The filter navigator shows up every second filter action

Expected Results:
The filter navigator shows up every time and the window remembers its last position


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 1 Hans Zekl 2022-04-09 16:23:17 UTC
With version 7.3.2.2 the problem is worse than before.

Now, the navigator window does not open, only the top of the window is visible. One has to enlarge the window by clicking on the border line and pull it down.
Comment 2 Robert Großkopf 2022-04-10 07:18:30 UTC
Have tried to understand what you are doing, but can't find the filter navigator.

You open a form in Base.
You click into a field (column).

…and then? The field is marked, I could copy the content, but how do you get a "filter navigator" here? I don't see anything pop up in LO 6.4.7.2 and also LO 7.3.2.2 on OpenSUSE 15.3 64bit rpm Linux.
Could you show it with a screenshot and attach it to this bug?
Comment 3 Hans Zekl 2022-04-10 09:29:29 UTC
Created attachment 179433 [details]
Screenshot1
Comment 4 Hans Zekl 2022-04-10 09:30:05 UTC
Created attachment 179434 [details]
Screenshot2
Comment 5 Hans Zekl 2022-04-10 09:37:22 UTC
Hello Robert,

I click into the form.

Then I click on the icon 'form based filter (Formularbasierter Filter (Strg+Umschalt+L) in German).

The the window of the Filternavigator pops up, but it is minimized.

In previous versions: 
 - it showed up enlarged.
 - I could fix its position and size by shifting the window to the desired place on the monitor screen and setting its size
 - the window showed up every time when I clicked the icon. Now it appears every second time only.

Greetings
Hans
Comment 6 Robert Großkopf 2022-04-10 14:53:23 UTC
I'm missing some steps to show a buggy behavior here:

1. Open a form in Base.
2. Click on "Form-Based Filters".
3. "Filter navigator" appears.
4. Form is ready for input something in a field.
5. Press "Apply Form-Based Filter".
6. Filtered rows will appear, "Filter navigator" will disappear.
7. Click on "Form-Based Filters". 
8. "Filter navigator" won't appear.  → Bug
9. Press "Apply Form-Based Filter".
10. Click on "Form-Based Filters". 
11. "Filter navigator" appears.

The "Filter navigator" seems to be deactivated every second time. You have to press "Filter Navigation" to get the filter.

This buggy behavior appears since LO 7.0.0.3 on OpenSUSE 15.3 64bit rpm Linux. Works well in LO 6.4.7.2 on the same system.

@Hans Zeki: Please report another bug for the "Filter navigator", which is minimized in Windows since LO 7.3.2.2. I couldn't reproduce it here. Test it with a clean user profile before.
Comment 7 raal 2022-11-26 07:02:03 UTC
(In reply to Robert Großkopf from comment #6)
> I'm missing some steps to show a buggy behavior here:
> 
> 1. Open a form in Base.

Can you attach a test file, please? Thank you.
Comment 8 Robert Großkopf 2022-11-26 07:29:46 UTC
Created attachment 183794 [details]
Open the form. Press Formbased Filter, apply, press Foirmbased Filter again

Filter navigator will be shown first time - but very small in LO 7.4.3.2 …
Apply filter and press "Formbased Filter" again.
No Navigator will be shown.
Comment 9 QA Administrators 2024-11-26 03:15:16 UTC Comment hidden (obsolete)
Comment 10 Hans Zekl 2024-11-28 22:47:44 UTC
The problem is still present and the unchanged.

Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 11 Saburo 2025-01-22 09:00:49 UTC
Bibisected
First bad commit
source 65cdced005f39fc2c7ca49a0427810518f368e19
Comment 12 BogdanB 2025-01-22 17:04:35 UTC
Caolan, could you take a look?

commit 65cdced005f39fc2c7ca49a0427810518f368e19	[log]
author	Caolán McNamara <caolanm@redhat.com>	Fri Nov 15 14:18:29 2019 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Thu Nov 21 15:27:30 2019 +0100
tree 14b5efaca13900e8d3df0f2c66586f43c7df0c73
parent 34b52ae66a275d7dd6328adf0d8da23b2ead6560 [diff]
use ToggleChildWindow

making this similar to existing cases like the writer word count
and other toggleable utility windows
Comment 13 Commit Notification 2025-11-03 10:41:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/093e46c06c88b29d1a5262791bb007aa5d3ea62c

Resolves: tdf#144343 This isn't used to toggle navigator on/off

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-11-03 15:41:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/5e32583e755e877fd1eb68049d6f26d54fd939fe

Resolves: tdf#144343 This isn't used to toggle navigator on/off

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Hans Zekl 2025-11-03 17:16:40 UTC
Downloaded 

LibreOfficeDev_25.8.4.0.0_Win_x86-64.msi

from

https://dev-builds.libreoffice.org/daily/libreoffice-25-8/Win-x86_64@tb73-TDF/current/

and tested with Windows 11 Pro, 25H2

and system

Processor	Intel(R) Core(TM) Ultra 7 265K (3.90 GHz)
Installed RAM	32,0 GB (31,5 GB usable)
Product-ID	00331-20034-34347-AA682
Systemtype	64-Bit-Betriebssystem, x64-basierter Prozessor

Tested with Base by starting component sbase.exe.

Result: still the same behaviour. The filter navigator shows up every second time.

Greetings
Hans
Comment 16 Robert Großkopf 2025-11-03 19:47:40 UTC
(In reply to Hans Zekl from comment #15)
> Downloaded 
> 
> LibreOfficeDev_25.8.4.0.0_Win_x86-64.msi
> 
> from
> 
> https://dev-builds.libreoffice.org/daily/libreoffice-25-8/Win-x86_64@tb73-
> TDF/current/
> 
Please read the description for every fixed bug:

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours.

You have downloaded a daily build after 2 hours. Wait 2 days and try it again.
Comment 17 Commit Notification 2025-11-04 12:38:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/c88828e302b811201171df0da50d6876410c89f0

Resolves: tdf#144343 This isn't used to toggle navigator on/off

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Hans Zekl 2025-11-12 05:39:08 UTC
Tested with build

LibreOfficeDev_25.8.4.0.0_Win_x86-64.msi	367919104	2025-Nov-11 03:07

Problem is solved.

Thank you
Hans