Resolves: tdf#144343 This isn't used to toggle navigator on/off

but instead contains a SfxBoolItem which specifies if it should
be shown or hidden and ChildWindowExecute takes care of deciding
if that requires Toggling on or off.

Change-Id: I2ad422041bb6f40f5b726111cf5ce35a32c39128
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193339
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>